# 3D-Image-Reconstruction-15618-Project

./: .gitignore  Makefile  Milestone_Report.md  Project_Proposal.md  README.md
code/: CMakeLists.txt  main.py  test_eight_point.py  test_findM2.py  test_get_correspondence.py  test_pipeline.py  test_pipeline_v1.py  test_pipeline_v2.py  test_pipeline_v3.py  test_pipeline_v4.py  test_ransac.py  test_triangulate.py
code/plotting/: 3D_Reconstruction_Plotting_Colab.ipynb
code/src/: alignment.py  bindings.cpp  bindings_ransac.cpp  bindings_ransac_warp.cpp  bindings_triangulate.cpp  correspondence.py  cuda_ops.cu  cuda_ops.cuh  find_M2.py  ransac.cu  ransac.cuh  ransac.py  ransac_warp.cu  ransac_warp.cuh  triangulate.cu  triangulate.cuh  triangulate_cusolver.cu
